Update Spring Boot with OpenRewrite recipe